Сохранение изображения в трёх размерах

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 fastapi = "^0.115.4"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 python-multipart = "^0.0.17"
+pillow = "^11.0.0"
 
 
 [build-system]
