--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ fastapi = "^0.115.4"
 uvicorn = {extras = ["standard"], version = "^0.32.0"}
 python-multipart = "^0.0.17"
 pillow = "^11.0.0"
+pydantic-settings = "^2.6.1"
+sqlalchemy = "^2.0.36"
+databases = "^0.9.0"
+aiosqlite = "^0.20.0"
 
 
 [build-system]
